spring 事务的使用

--- a/web/WEB-INF/log4j.properties
+++ b/web/WEB-INF/log4j.properties
@@ -1,6 +1,8 @@
 
 log4j.rootLogger = INFO, CATALINA,CONSOLE
 
+log4j.logger.org.springframework=INFO
+
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.CATALINA.File = ${catalina.base}/logs/catalina
