--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,6 +13,21 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
+	<!--log4j配置文件加载-->  
+   <context-param>      
+       <param-name>log4jConfigLocation</param-name>      
+       <param-value>/WEB-INF/log4j.properties</param-value>      
+   </context-param>  
+   <!--启动一个watchdog线程每1800秒扫描一下log4j配置文件的变化-->  
+   <context-param>      
+       <param-name>log4jRefreshInterval</param-name>      
+       <param-value>1800000</param-value>      
+   </context-param>   
+   <!--spring log4j监听器-->  
+   <listener>      
+       <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>      
+   </listener>  
+	
 	<!-- SpringMvc 配置dispatcherServlet -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
