--- a/web/WEB-INF/log4j.properties
+++ b/web/WEB-INF/log4j.properties
@@ -1,7 +1,7 @@
 
 log4j.rootLogger = INFO, CATALINA,CONSOLE
 
-log4j.logger.org.springframework=INFO
+log4j.category.org.springframework=DEBUG
 
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
