调整配置文件路径及名称

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,6 +1,7 @@
 
 log4j.rootLogger = INFO, CATALINA,CONSOLE
 
+#\u8f93\u51faspring\u65e5\u5fd7
 log4j.category.org.springframework=DEBUG
 
 # Define all the appenders
